[project]
name = "pytest-exmon"
version = "0.1.0"
description = ""
authors = [
    {name = "Gleams API user",email = "Stephen.Swannell+ghapi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
]
packages = [
    { include = "pytest_exmon"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
tbump = "^6.11.0"

